# rust-midgard-api

./: Cargo.toml  README.md
migrations/: 20241127062437_create_initial_tables.sql
src/: api.rs  db.rs  main.rs  models.rs  populate_db.rs  utils.rs
src/api/: routes.rs
src/api/routes/: depth_price_history.rs  earnings_history.rs  rune_pool_history.rs  swaps_history.rs
src/db/: insertions.rs
src/midgard_api/: handlers.rs  interface.rs
src/models/: depth_price_history.rs  earnings_history.rs  rune_pool_history.rs  swaps_history.rs
